# ase-shield

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  pages.yml  release.yml
apps/companion/: index.html  package.json  vite.config.ts
apps/companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion/src-tauri/capabilities/: default.json
apps/companion/src-tauri/icons/: icon.icns
apps/companion/src-tauri/src/: launch.rs  lib.rs  main.rs
apps/companion/src-tauri/src/dashboard/: api.rs  export.rs  mod.rs  static_files.rs
apps/companion/src-tauri/src/ipc/: mod.rs
apps/companion/src-tauri/src/quarantine/: mod.rs  scan.rs  store.rs  types.rs
apps/companion/src-tauri/src/recovery/: diff.rs  manager.rs  mod.rs  report.rs  snapshot.rs  types.rs
apps/companion/src-tauri/src/remote_guard/: manager.rs  mod.rs  poll.rs  sensitive.rs  types.rs  watch.rs
apps/companion/src-tauri/src/sandbox/: detect.rs  mod.rs  preview.rs  router.rs  session.rs  tier2.rs  types.rs
apps/dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
apps/extension/: manifest.config.ts  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  BETA.md  DASHBOARD.md  DASHBOARD_UI.md  DEVELOPMENT.md  DEV_LAB.md  KNOWN_ISSUES.md  PRIVACY.md  PRODUCT_ROADMAP.md  PRODUCT_VISION.md  ROADMAP.md  THREAT_MODEL.md  WINDOWS_SANDBOX.md  privacy.html
docs/decisions/: ADR-002-localhost-ipc-m0.md  (+6 more)
fixtures/: README.md
scripts/: package-extension.mjs  sign-installer.ps1  stage-release-assets.mjs
(+107 files in other folders)
