[package]
name = "ase-companion"
version = "1.0.0-beta.1"
description = "Anti-SE desktop companion (Windows Phase 2 shell)"
authors = ["Anti-SE"]
edition = "2021"

[lib]
name = "ase_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
zip = "2.2"
include_dir = "0.7"
open = "5"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
base64 = "0.22"
sysinfo = "0.33"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
printpdf = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
